Fix H1 spacing in blogs list

--- a/css/custom.css
+++ b/css/custom.css
@@ -557,7 +557,8 @@ li.glide__slide div.bg div img {
 
 .blog .description-container>h1 {
     font-size: 3.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 5%;
+    margin-bottom: 0;
 }
 
 
@@ -573,6 +574,10 @@ li.glide__slide div.bg div img {
     .blog .description-container {
         padding: 15% 5% 5% 5%;
     }
+
+    .blog .description-container>h1 {
+        padding-bottom: 2.5%;
+    }
 }
 
 @media (max-width: 840px) {
@@ -581,11 +586,16 @@ li.glide__slide div.bg div img {
     }
 
     .blog .image-container {
-        margin: 5% 2.5% 0 2.5%;
+        margin: 5% 5% 0 5%;
     }
 
     .blog .description-container {
-        padding: 5% 2.5% 5% 2.5%;
+        padding: 5% 5% 20% 5%;
+    }
+
+    .blog .description-container>h1 {
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
     }
 }
 
